[gd_scene load_steps=2 format=3 uid="uid://bwmuhr4im6pbt"]

[ext_resource type="Script" path="res://Interaction/InteractionArea.gd" id="1_ntdh4"]

[node name="InteractionArea" type="Area2D"]
position = Vector2(-4532.57, -930.436)
scale = Vector2(4.27147, 3.35897)
collision_layer = 0
collision_mask = 2
script = ExtResource("1_ntdh4")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
